Nuevo archivo con imagenes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header id="encabezado">
         
-        <img src="img/logo.png" alt="logo">
+        <img src="logo.png" alt="logo">
         <a href="#Inicio">Inicio</a>
         <a href="#Contacto">Contacto</a> 
 
@@ -23,7 +23,7 @@
             <br> <br>
             <div id="imagen">
                 
-                <img id="imagen" src="img/playa.png">
+                <img id="imagen" src="playa.png">
 
             </div>
             <br> <br>
@@ -53,11 +53,11 @@
                 Para ello me mantengo activa en las diferentes redes sociales y sigo adiestrándome en diferentes cursos, tales como Inglés, Community Manager, Fundamentos de Facebook e Instagram, actualmente estoy cursando Código Pa Lante para aprender a programar páginas web.
                 </p>
              <br> <br> 
-                <p> Domicilio: Ciudad Colon, Condominio Altavista. Costa Rica.
+                <p> Domicilio: Ciudad Colon, Condominio Altavista. Costa Rica. </p>
                     <br> <br> 
                     Correo electronico: <A HREF="allinsonsotom@gmail.com">Enviame un mail! </A>
                 <br> <br> 
-                Telefono: +506 83035379
+                <p> +506 83035379
                 </p>
 
                 <p> Me pueden contactar a través de mis RRSS o Whatsapp.
@@ -77,11 +77,11 @@
         <br><br> <br><br>
         <div>
         <a href="mailto:allinsontotom@gmail.com" target="_blank"> 
-            <img src="img/mail.png" width="40" align-items="center" class="bmail"/> </a>
+            <img src="mail.png" width="40" align-items="center" class="bmail"/> </a>
         <a href="https://github.com/" target="_blank"> 
-            <img src="img/github.png" width="40" align-items="center" class="bgit"/> </a> 
+            <img src="github.png" width="40" align-items="center" class="bgit"/> </a> 
         <a href="https://www.linkedin.com/" target="_blank"> 
-            <img src="img/linkedin.png" width="40" align-items="center" class="blink"/> </a>
+            <img src="linkedin.png" width="40" align-items="center" class="blink"/> </a>
         </div>
     </nav>
     <br><br> <br><br>
