--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
                     <li class="menu-item">
                         <a href="#inicio" class="active">Inicio</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
-                    <li class="menu-items">
-                        <a href="#Contactos" class="FContacto">Contacto</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <li class="menu-item">
+                        <a href="#Contactos" class="active">Contacto</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
-                    <li class="menu-items">
-                        <a href="#Descripción" class="FDescripción">Descripción</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <li class="menu-item">
+                        <a href="#Descripción" class="active">Descripción</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
-                    <li class="menu-items">
-                     <a href="#Experiencia" class="FExperiencia">Experiencia</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <li class="menu-item">
+                     <a href="#Experiencia" class="active">Experiencia</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                     </li>
 
                 </ul>
@@ -91,14 +91,21 @@
                 <br> <br>
                 <p> Domicilio: Ciudad Colón, Condominio AltaVista. Costa Rica. </p>
                 <br> <br> 
-                    Mi telefono: <A HREF="https://web.whatsapp.com"> +506 83035379 Enviame un mensaje! </A>
+                <li class="menu-redes">
+                    Mi telefono: <A HREF="https://web.whatsapp.com" class="Descripción"> +506 83035379 Enviame un mensaje! </A>
+                </li>
                 <br> <br> 
-                <p> Me pueden contactar a través de mis redes sociales! <A HREF="https://www.facebook.com/allinsonsotom"> Como mi Facebook</A><A HREF="https://www.instagram.com/alsoto14/"> , Y mi Instagram @Alsoto14</A>
-                </p>
+                <li class="menu-redes">
+                    <p> Me pueden contactar a través de mis redes sociales! <A HREF="https://www.facebook.com/allinsonsotom" class="Descripción"> Como mi Facebook</A><A HREF="https://www.instagram.com/alsoto14/" class="Descripción"> , Y mi Instagram @Alsoto14</A>
+                    </p>
+                 </li>
                 <br> <br>
                 <li><a href="#">Inicio</a></li>
                 <br> <br>
+
             </div>
+
+    
 
         </section>
 
@@ -112,7 +119,7 @@
                 <img src="mail.png" width="40" align-items="center" class="bmail"/> </a>
                 <a href="https://github.com/" target="_blank"> 
                 <img src="github.png" width="40" align-items="center" class="bgit"/> </a> 
-                <a href="https://www.linkedin.com/" target="_blank"> 
+                <a href="https://www.linkedin.com/search/results/all/?fetchDeterministicClustersOnly=true&heroEntityKey=urn%3Ali%3Afsd_profile%3AACoAAAWZvyYBNu6POiz-jyXgARKUC6X4PHdhLmo&keywords=allinson%20soto%20martinez&origin=RICH_QUERY_SUGGESTION&position=0&searchId=903e4392-b038-4190-8659-424d8e1d2699&sid=A!2" target="_blank"> 
                 <img src="linkedin.png" width="40" align-items="center" class="blink"/> </a>
              </div>
 
